Added some extra options to build.gradle.kts